// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@npm/mobydick-progress/Indicator renders correctly 1 step, 1 steps 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#EEEFF1",
        "borderRadius": 20,
        "height": 20,
        "justifyContent": "center",
        "overflow": "hidden",
        "width": 300,
      },
      null,
      null,
      null,
    ]
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "backgroundColor": "#2B78EE",
        "borderRadius": 20,
        "height": 20,
        "transform": Array [
          Object {
            "translateX": -1000,
          },
        ],
        "width": "100%",
      }
    }
  />
</View>
`;

exports[`@npm/mobydick-progress/Indicator renders correctly 1 step, 5 steps 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#EEEFF1",
        "borderRadius": 20,
        "height": 20,
        "justifyContent": "center",
        "overflow": "hidden",
        "width": 300,
      },
      null,
      null,
      null,
    ]
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "backgroundColor": "#2B78EE",
        "borderRadius": 20,
        "height": 20,
        "transform": Array [
          Object {
            "translateX": -1000,
          },
        ],
        "width": "100%",
      }
    }
  />
</View>
`;

exports[`@npm/mobydick-progress/Indicator renders correctly 5 step, 10 steps 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#EEEFF1",
        "borderRadius": 20,
        "height": 20,
        "justifyContent": "center",
        "overflow": "hidden",
        "width": 300,
      },
      null,
      null,
      null,
    ]
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "backgroundColor": "#2B78EE",
        "borderRadius": 20,
        "height": 20,
        "transform": Array [
          Object {
            "translateX": -1000,
          },
        ],
        "width": "100%",
      }
    }
  />
</View>
`;

exports[`@npm/mobydick-progress/Indicator renders correctly 7 step, 7 steps 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#EEEFF1",
        "borderRadius": 20,
        "height": 20,
        "justifyContent": "center",
        "overflow": "hidden",
        "width": 300,
      },
      null,
      null,
      null,
    ]
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "backgroundColor": "#2B78EE",
        "borderRadius": 20,
        "height": 20,
        "transform": Array [
          Object {
            "translateX": -1000,
          },
        ],
        "width": "100%",
      }
    }
  />
</View>
`;

exports[`@npm/mobydick-progress/Indicator renders correctly with colors 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#EEEFF1",
        "borderRadius": 20,
        "height": 20,
        "justifyContent": "center",
        "overflow": "hidden",
        "width": 300,
      },
      Object {
        "borderRadius": 15,
      },
      Object {
        "height": 30,
      },
      Object {
        "width": 200,
      },
    ]
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "backgroundColor": "#FBCEB1",
        "borderRadius": 20,
        "height": 30,
        "transform": Array [
          Object {
            "translateX": -1000,
          },
        ],
        "width": "100%",
      }
    }
  />
</View>
`;
